Tue Jul  3 14:44:00 2001  Craig Rodrigues  <crodrigues@bbn.com>

        * ace/config-win32-common.h: Borland C++ apparently
          does not support the "extern template class" Microsoft VC++
          proprietary extension.  Thanks to Chris Kohloff <chris@kohlhoff.com>
          for the fix.

Tue Jul 03 12:26:33 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/Synch_T.h (class ACE_Reverse_Lock): Added a parameter to the
	  constructor of the reverse lock.  The ACE_ACQUIRE_METHOD
	  parameter is used to indicate which acquire() method will be
	  called on the real lock when the release() method is called on
	  the reverse lock. REGULAR indicated the acquire() method, READ
	  indicates the acquire_read() method, and WRITE indicates the
	  acquire_write() method.  Note that the try_*() methods are not
	  represented here because we have to make sure that the release()
	  method on the reverse lock acquires a lock on the real lock.

	  Thanks to Edan Ayal <edana@bandwiz.com> for suggesting this.

Tue Jul  3 06:20:13 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
  
        * ace/Reactor.h,
        * ace/Reactor_Impl.h,
	* ace/Select_Reactor_Base.cpp,
	* ace/Select_Reactor_Base.i,
  	* ace/Select_Reactor_Base.h,
    	* ace/WFMO_Reactor.cpp,
      	* ace/WFMO_Reactor.h: Added an enhancement that allows the
	  Reactor to selectively purge event handlers from its
 	  notification queue according to their Reactor_Mask type.  Thanks
 	  to Edan Ayal <edana@bandwiz.com> for contributing this.	
  
	* tests/Reactor_Notify_Test.cpp (run_notify_purge_test): 
	  Added a new set of tests for the new selective notification
 	  purging features of the Reactor.  Thanks to Edan Ayal
 	  <edana@bandwiz.com> for contributing this.

	* ace/WIN32_Asynch_IO.cpp: Removed the
	  ACE_WIN32_Asynch_Result (handler, act, event, 0, 0, priority,
 	  signal_number), initializer since we no longer use virtual
 	  inheritance.  Thanks to Alexander Libman